fix text height overflow issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
+  --font-size-xsm: clamp(0.6rem, 0.17vw + 0.6rem, 0.7rem);
+
   --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
   --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1rem);
   --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.25rem);
